force-app/main/default/objects/Plan__c.object
<CustomObject>
    <fields>
        <fullName>ASU_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not being populated by the PeopleSoft import and will be removed.</description>
        <label>(DO NOT USE) ASU Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Peoplesoft] - Relationship created to associate the opportunity to the correct Account (college) to assist in reporting</description>
        <label>(DO NOT USE) Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plan_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_in_Degree_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - If box is checked, then the degree is available to view in Degree Search.</description>
        <label>Available in Degree Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>[Peoplesoft] - Examples include: Graduate, Law, Undergraduate</description>
        <label>(DO NOT USE) Career</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Level__c</fullName>
        <description>[Peoplesoft] -  Degree level of respective academic plan.  Examples include: Masters, Doctoral, Juris Doctor, Certificate, Non-Degree</description>
        <label>(DO NOT USE) Degree Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Doctoral</fullName>
                </value>
                <value>
                    <fullName>Juris Doctor</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>Non-Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Search_Name__c</fullName>
        <description>[Peoplesoft] - PS table: ASU_ACADP_EXTNS, PS field: DESCR100</description>
        <label>Degree Search Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>[??] - Textbook for degree</description>
        <label>Degree</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diploma_Description__c</fullName>
        <description>[Peoplesoft] - PS table: ACAD_PLAN_TBL,  PS field: DIPLOMA_DESCR</description>
        <label>Diploma Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>[Peoplesoft] - Lookup to the Organization Object. PS table: ACAD_PLAN_OWNER, PS field: ACAD_ORG</description>
        <label>Owner Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <description>[Peoplesoft] - Code for the plan (major)</description>
        <externalId>true</externalId>
        <label>Plan Code</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Effective_Date__c</fullName>
        <description>[Peoplesoft] - Effective date for the plan</description>
        <label>Plan Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Location__c</fullName>
        <description>[Peoplesoft] - Location for the plan</description>
        <label>(DO NOT USE) Plan Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Downtown</fullName>
                </value>
                <value>
                    <fullName>Lake Havasu</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Poly</fullName>
                </value>
                <value>
                    <fullName>Tempe</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Examples include: Active, Teach Out, Inactive</description>
        <label>Plan Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <description>[Peoplesoft] - Examples include: CER, MAJ, NDG, PBF</description>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CER</fullName>
                </value>
                <value>
                    <fullName>COS</fullName>
                </value>
                <value>
                    <fullName>MAJ</fullName>
                </value>
                <value>
                    <fullName>MIN</fullName>
                </value>
                <value>
                    <fullName>NDG</fullName>
                </value>
                <value>
                    <fullName>PBF</fullName>
                </value>
                <value>
                    <fullName>PRE</fullName>
                </value>
                <value>
                    <fullName>PRP</fullName>
                </value>
                <value>
                    <fullName>SPU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_URL__c</fullName>
        <description>[Peoplesoft] - URL for the plan (major)</description>
        <formula>IF (TEXT( Program__r.Career__c ) = "Non-Credit" || NOT(Available_in_Degree_Search__c),"", 
"https://webapp4.asu.edu/programs/t5/majorinfo/ASU00/"&amp; Plan_Code__c &amp;"/"&amp; 
CASE(TEXT( Program__r.Career__c ), 
"Law", "graduate", 
"Undergraduate", "undergrad", 
LOWER(TEXT( Program__r.Career__c ))) 
&amp;"/false")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>[Peoplesoft] - Transcript Description textbox</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transcript_Description__c</fullName>
        <label>Transcript Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eAdvisor_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Peoplesoft] - Lookup to the Organization Object.  Eadvisor Oracle database. Table plancollege to get COLLEGE_ACAD_ORG. And then query PS_ACAD_ORG_TBL  to get the DESCRFORMAL using the value of the college_acad_org for ACAD_ORG in PS_ACAD_ORG_TBL.</description>
        <label>eAdvisor Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Plans (eAdvisor Organization)</relationshipLabel>
        <relationshipName>Plans_eAdvisor_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Listing of all Plans (majors)</description>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>ASU_Online_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Plan_Location__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Location__c</field>
            <operation>includes</operation>
            <value>Online</value>
        </filters>
        <filters>
            <field>ASU_Online__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ASU Online Managed</label>
    </listViews>
    <listViews>
        <fullName>All_Plans</fullName>
        <columns>NAME</columns>
        <columns>Degree_Search_Name__c</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>eAdvisor_Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Diploma_Description__c</columns>
        <columns>Degree__c</columns>
        <columns>Plan_URL__c</columns>
        <columns>Available_in_Degree_Search__c</columns>
        <columns>ASU_Online__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Plans</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
            <role>UTO_University_Technology_Office</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PlansAvailbleInDS</fullName>
        <columns>NAME</columns>
        <columns>Degree_Search_Name__c</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>eAdvisor_Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Diploma_Description__c</columns>
        <columns>Degree__c</columns>
        <columns>Plan_URL__c</columns>
        <columns>Available_in_Degree_Search__c</columns>
        <columns>ASU_Online__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_in_Degree_Search__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Plans Available in Degree Search</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
            <role>UTO_University_Technology_Office</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PlanswithDiplomaName</fullName>
        <columns>NAME</columns>
        <columns>Degree_Search_Name__c</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>eAdvisor_Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Diploma_Description__c</columns>
        <columns>Degree__c</columns>
        <columns>Plan_URL__c</columns>
        <columns>Available_in_Degree_Search__c</columns>
        <columns>ASU_Online__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Diploma_Description__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>All Plans with Diploma Name</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
            <role>UTO_University_Technology_Office</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Planswitheadvisorog</fullName>
        <columns>NAME</columns>
        <columns>Degree_Search_Name__c</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>eAdvisor_Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Diploma_Description__c</columns>
        <columns>Degree__c</columns>
        <columns>Plan_URL__c</columns>
        <columns>Available_in_Degree_Search__c</columns>
        <columns>ASU_Online__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eAdvisor_Organization__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>All Plans with eAdvisor Org</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
            <role>ES_Enrollment_Services</role>
            <role>ES_Enrollment_Services_Communication</role>
            <role>UTO_University_Technology_Office</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Certificate_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Location__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Organization__c</columns>
        <columns>Program__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Type__c</field>
            <operation>equals</operation>
            <value>CER</value>
        </filters>
        <label>Certificate Plans</label>
        <sharedTo>
            <role>GE_Graduate_Education_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coll_Technology_Innovation</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Coll Technology &amp; Innovation</value>
        </filters>
        <label>Coll Technology &amp; Innovation</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Doctoral_Programs</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Degree_Level__c</field>
            <operation>equals</operation>
            <value>Doctoral</value>
        </filters>
        <label>Doctoral Programs</label>
        <sharedTo>
            <role>GE_Graduate_Education_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Graduate_College</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Graduate College</value>
        </filters>
        <label>Graduate College</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Health_Solutions</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>ASU_Online__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Health Solutions</value>
        </filters>
        <label>Health Solutions</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Herberger_Institute</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Herberger Institute</value>
        </filters>
        <label>Herberger Institute</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Ira_A_Fulton_Engineering</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Available_in_Degree_Search__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Ira A Fulton Engineering</value>
        </filters>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>true,Active,Teach Out</value>
        </filters>
        <filters>
            <field>Available_in_Degree_Search__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ira A Fulton Engineering</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Liberal_Arts_Sciences</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Liberal Arts &amp; Sciences</value>
        </filters>
        <label>Liberal Arts &amp; Sciences</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Major_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Plan_Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Type__c</field>
            <operation>equals</operation>
            <value>MAJ</value>
        </filters>
        <label>Major Plans</label>
        <sharedTo>
            <role>GE_Graduate_Education_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Interdis_Arts_Sciences</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>Organization__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>New Interdis Arts &amp; Sciences</value>
        </filters>
        <label>New Interdis Arts &amp; Sciences</label>
        <sharedTo />
    </listViews>
</CustomObject>