force-app/main/default/objects/Plan__c/listViews/ASU_Online_Plans.listView-meta.xml
<ListView>
    <fullName>ASU_Online_Plans</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Program__c</columns>
    <columns>Plan_Location__c</columns>
    <columns>Plan_Effective_Date__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plan_Location__c</field>
        <operation>includes</operation>
        <value>Online</value>
    </filters>
    <filters>
        <field>ASU_Online__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ASU Online Managed</label>
</ListView>