force-app/main/default/objects/Plan__c/listViews/Coll_Technology_Innovation.listView-meta.xml
<ListView>
    <fullName>Coll_Technology_Innovation</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Coll Technology &amp; Innovation</value>
    </filters>
    <label>Coll Technology &amp; Innovation</label>
    <sharedTo />
</ListView>