force-app/main/default/objects/Plan__c/listViews/Doctoral_Programs.listView-meta.xml
<ListView>
    <fullName>Doctoral_Programs</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Plan_Effective_Date__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Degree_Level__c</field>
        <operation>equals</operation>
        <value>Doctoral</value>
    </filters>
    <label>Doctoral Programs</label>
    <sharedTo>
        <role>GE_Graduate_Education_Manager</role>
    </sharedTo>
</ListView>