force-app/main/default/objects/Plan__c/listViews/Graduate_College.listView-meta.xml
<ListView>
    <fullName>Graduate_College</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Graduate College</value>
    </filters>
    <label>Graduate College</label>
    <sharedTo />
</ListView>