force-app/main/default/objects/Plan__c/listViews/Health_Solutions.listView-meta.xml
<ListView>
    <fullName>Health_Solutions</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>ASU_Online__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Health Solutions</value>
    </filters>
    <label>Health Solutions</label>
    <sharedTo />
</ListView>