force-app/main/default/objects/Plan__c/listViews/Herberger_Institute.listView-meta.xml
<ListView>
    <fullName>Herberger_Institute</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Herberger Institute</value>
    </filters>
    <label>Herberger Institute</label>
    <sharedTo />
</ListView>