force-app/main/default/objects/Plan__c/listViews/Ira_A_Fulton_Engineering.listView-meta.xml
<ListView>
    <fullName>Ira_A_Fulton_Engineering</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Available_in_Degree_Search__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Ira A Fulton Engineering</value>
    </filters>
    <filters>
        <field>Plan_Status__c</field>
        <operation>equals</operation>
        <value>true,Active,Teach Out</value>
    </filters>
    <filters>
        <field>Available_in_Degree_Search__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ira A Fulton Engineering</label>
    <sharedTo />
</ListView>