force-app/main/default/objects/Plan__c/listViews/Liberal_Arts_Sciences.listView-meta.xml
<ListView>
    <fullName>Liberal_Arts_Sciences</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Liberal Arts &amp; Sciences</value>
    </filters>
    <label>Liberal Arts &amp; Sciences</label>
    <sharedTo />
</ListView>