force-app/main/default/objects/Plan__c/listViews/Major_Plans.listView-meta.xml
<ListView>
    <fullName>Major_Plans</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Plan_Effective_Date__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plan_Type__c</field>
        <operation>equals</operation>
        <value>MAJ</value>
    </filters>
    <label>Major Plans</label>
    <sharedTo>
        <role>GE_Graduate_Education_Manager</role>
    </sharedTo>
</ListView>