force-app/main/default/objects/Plan__c/listViews/New_Interdis_Arts_Sciences.listView-meta.xml
<ListView>
    <fullName>New_Interdis_Arts_Sciences</fullName>
    <columns>NAME</columns>
    <columns>Plan_Code__c</columns>
    <columns>Organization__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>New Interdis Arts &amp; Sciences</value>
    </filters>
    <label>New Interdis Arts &amp; Sciences</label>
    <sharedTo />
</ListView>